crates/sdk-tests/tests/ctor/ctor_used_twice_fails.rs
use svm_sdk::app;

#[app]
mod App {
    #[ctor]
    #[ctor]
    fn get() {}
}

fn main() {}
